--- a/src/Components/Reload/Reload.css
+++ b/src/Components/Reload/Reload.css
@@ -9,3 +9,9 @@
     background:rgb(233, 37, 119);
     cursor: pointer;
 }
+
+@media only screen and (max-width:450px){
+    .reload-btn{
+        cursor:none;
+    }
+}
